--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "update": "npx npm-check-updates -u"
   },
   "dependencies": {
+    "@mantine/charts": "^7.4.0",
     "@mantine/code-highlight": "^7.4.0",
     "@mantine/core": "^7.4.0",
     "@mantine/dropzone": "^7.4.0",
@@ -25,6 +26,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.10.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
