feat: use builtin oauth2 flow

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,8 @@ LOG_LEVEL=[optional: 0-1, increasing verbosity for higher numbers]
 API_SERVER_PORT=[required{, apiserver}: port to run the API server, e.g. 8080]
 API_SERVER_AZURE_TENANT_ID=[required{, apiserver}: Azure tenant ID for API Server]
 API_SERVER_AZURE_CLIENT_ID=[required{, apiserver}: Azure client ID for API Server]
+API_SERVER_AZURE_CLIENT_SECRET=[required{, apiserver}: Azure client secret for API Server]
+API_SERVER_AZURE_LOGIN_SCOPE=[required{, apiserver}: Azure login scope for API Server]
 
 WEB_SERVER=[required{, apiserver}: host of the Web Server, needed for CORS]
 
