--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -51,6 +51,8 @@ jobs:
           API_SERVER_PORT: ${{ vars.API_SERVER_PORT }}
           API_SERVER_AZURE_TENANT_ID: ${{ vars.API_SERVER_AZURE_TENANT_ID }}
           API_SERVER_AZURE_CLIENT_ID: ${{ vars.API_SERVER_AZURE_CLIENT_ID }}
+          API_SERVER_AZURE_CLIENT_SECRET: ${{ vars.API_SERVER_AZURE_CLIENT_SECRET }}
+          API_SERVER_AZURE_LOGIN_SCOPE: ${{ vars.API_SERVER_AZURE_LOGIN_SCOPE }}
           WEB_SERVER: ${{ vars.WEB_SERVER }}
           DATABASE_TYPE: ${{ vars.DATABASE_TYPE }}
           DATABASE_NAME: ${{ vars.DATABASE_NAME }}
