--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,21 @@
     "update": "npx npm-check-updates -u"
   },
   "dependencies": {
-    "@mantine/charts": "^7.5.2",
-    "@mantine/code-highlight": "^7.5.2",
-    "@mantine/core": "^7.5.2",
-    "@mantine/dropzone": "^7.5.2",
-    "@mantine/form": "^7.5.2",
-    "@mantine/hooks": "^7.5.2",
-    "@mantine/notifications": "^7.5.2",
+    "@mantine/charts": "^7.5.3",
+    "@mantine/code-highlight": "^7.5.3",
+    "@mantine/core": "^7.5.3",
+    "@mantine/dropzone": "^7.5.3",
+    "@mantine/form": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
+    "@mantine/notifications": "^7.5.3",
     "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
-    "mantine-react-table": "^2.0.0-alpha.17",
+    "mantine-react-table": "^2.0.0-beta.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.0",
+    "recharts": "^2.12.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
