feat: remove configuration for private repo

--- a/backend/cmd/apiserver/Dockerfile
+++ b/backend/cmd/apiserver/Dockerfile
@@ -10,12 +10,8 @@ RUN apk add --no-cache git \
 
 WORKDIR /app
 
-ENV GOPRIVATE="github.com/darylhjd/oams/*"
-ENV GIT_SSH_COMMAND="ssh -i /run/secrets/ssh_key"
-RUN git config --global --add url."git@github.com:".insteadOf "https://github.com/"
-RUN mkdir -p -m 0700 /root/.ssh && ssh-keyscan github.com >> /root/.ssh/known_hosts
 COPY go.mod go.sum ./
-RUN --mount=type=secret,id=ssh_key go mod download
+RUN go mod download
 
 COPY . ./
 
